# contrastive-graphs

./: .RUN  .gitignore  CITATION.bib  nik.sif.do  pyproject.toml  readme.md
dataframes/: default.csv.do  default.do
media/: default.pdf.do  default.png.do  default.tex.do  default.tg.do  fig1.pdf.do  telegram.json  telegram.py  telegram_send.py
media/fonts/: inter.zip.do  iosevka.zip.do  mpl_dump_fonts.py  mpl_fontcache.json.do  noto.zip.do  roboto.zip.do
media/fonts/ttf/inter/: all-fonts.do  default.ttf.do  fontlist.txt.do
media/fonts/ttf/iosevka/: all-fonts.do  default.ttf.do  fontlist.txt.do
media/fonts/ttf/noto/: all-fonts.do  default.ttf.do
media/fonts/ttf/roboto/: all-fonts.do  default.ttf.do
media/magick/: magick.do
media/table/: .gitignore  default.md.do  default.parquet.do  default.pdf.do  default.tex.do  default.txt.do  icml2025.sty  redo-table.sh
runs/: default.zip.do
src/nik_graphs/: _scalebars.py  agg.py  graph_utils.py  launch.py  mnist.py  path_utils.py  plot.py  tex_utils.py
src/nik_graphs/aggregate/: all_benchmarks.py  all_layouts.py  gfeat_benchmarks.py  high_dim_benchmarks.py  learned_temp.py  learntemp_evals.py  low_dim_benchmarks.py  main_benchmarks.py  node2vec_pq.py  sbm_temp.py  temp_evals.py  tsne_ablations.py  tsne_cne_evals.py
src/nik_graphs/modules/: arxiv.py  citeseer.py  cne.py  cne1.py  computer.py  cora.py  deepwalk.py  dgl.py  drgraph.py  fa2.py  ftsne.py  gcl.py  gfeat.py  graphmae.py  graphmae_extra.py  graphmae_gat.py  knn.py  lin.py  lpred.py  mag.py  mnist.py  nmf.py  nnw.py  noack.py  node2vec.py  nx.py  photo.py  recall.py  sbm.py  sfdp.py  sgtsnepi.py  spcorr.py  spectral.py  spectral_recompute.py  tfdp.py  tsne.py
src/nik_graphs/plotting/: combined_layout_selection.py  fig1.py  high_dim_metrics.py  jnb.mplstyle  layout_selection.py  layouts.py  low_dim_metrics.py  node2vec_pq.py  random_inits.py  sbm_temp.py  summary.py  temperatures.py  timings.py  trainmetrics.py  tsne_ablations.py  tsne_cne_metrics.py  tsne_cne_panels.py  tsne_rownorm.py
src/nik_graphs/tables/: __init__.py  accuracies.py  cne_deepwalk_etc.py  cne_recall_diff_to_other.py  dataset_info.py  recall.py
