[project]
dynamic = ["version"]
name = "nik-graphs"
authors = [
  {name = "Nik Böhm", email = "mail@jnboehm.com"},
]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",
]
[project.urls]
# Repository = "https://github.com/berenslab/contrastive-graphs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/nik_graphs/__init__.py"

