[project]
dynamic = ["version"]
name = "nik-graphs"
authors = [
  {name = "Nik Böhm", email = "mail@jnboehm.com"},
]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",
]
requires-python = "==3.12.*"
dependencies = [
  "networkx>=3.4.2",
  "pandas>=2.2.3",
  "numpy>=1.26.0",
  "scikit-learn>=1.6.0",
  "annoy>=1.17.3",
  "matplotlib>=3.9.3",
  "opentsne>=1.0.2",
  "torch>=2.4.0",
  # "torchvision>=0.20.0",
  "tsimcne>=0.4.13",
  "lightning>=2.4.0",
  "python-telegram-bot>=21.9",
  "pillow>=11.0.0",
  "ffmpeg-python>=0.2.0",
  "polars>=1.17.1",
  "dgl",
  "ogb>=1.3.6",
  "torch-geometric>=2.6.1",
]

# [[tool.uv.index]]
# name = "dgl"
# url = "https://data.dgl.ai/wheels/torch-2.4/cu124/repo.html"
# explicit = true

[tool.uv.sources]
dgl = { url = "https://data.dgl.ai/wheels/torch-2.4/cu124/dgl-2.4.0%2Bcu124-cp312-cp312-manylinux1_x86_64.whl" }
# dgl = {index = "dgl"}


[project.urls]
Repository = "https://github.com/berenslab/contrastive-graphs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/nik_graphs/__init__.py"

